Yeah it wasnt intended to do it from here.

--- a/.github/workflows/gdextension.yml
+++ b/.github/workflows/gdextension.yml
@@ -1,17 +1,5 @@
 name: GDExtension
 on:
-  workflow_dispatch:
-    inputs:
-      fullbuild:
-        description: "Whether or not to build all targets"
-        required: true
-        type: boolean
-        default: false
-      
-      godot_version:
-        description: "Version of godot to be used"
-        required: true
-        type: string
   workflow_call:
     inputs:
       fullbuild:
@@ -24,6 +12,7 @@ on:
         description: "Version of godot to be used"
         required: true
         type: string
+        default: '4.1'
 
 env:
   BASE_BRANCH: main
