--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -14,7 +14,7 @@ on:
 
 env:
   BASE_BRANCH: main
-  SCONSFLAGS: "production=yes extra_suffix=gdluau"
+  SCONSFLAGS: "production=yes extra_suffix=RobloxToGodotProject"
   SCONS_CACHE_LIMIT: 7168
   GODOT_VERSION: ${{ inputs.godot_version }}-stable
 
